[package]
name = "burrito"
version = "0.1.0"
authors = ["Brendon Daugherty <brendond@fb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.24"
anyhow = "1.0.25"
serde = "*"
serde_json = "*"
structopt = { version = "0.3", default-features = false }
dotenv = "0.15"